--- a/app/src/main/res/layout/tela_forum.xml
+++ b/app/src/main/res/layout/tela_forum.xml
@@ -256,7 +256,7 @@
         tools:layout_editor_absoluteY="522dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_cadastrar"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:background="@color/secondary"
