--- a/app/src/main/res/layout/tela_inicio.xml
+++ b/app/src/main/res/layout/tela_inicio.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="0dp">
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/avatar_user_4"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:srcCompat="@drawable/avatar_mariana"
@@ -16,7 +16,7 @@
         tools:layout_editor_absoluteY="65dp" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/avatar_user_3"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:srcCompat="@drawable/avatar_bradesco"
@@ -24,37 +24,37 @@
         tools:layout_editor_absoluteY="65dp" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/username_user3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nome_usuario3"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="264dp"
         tools:layout_editor_absoluteY="125dp" />
 
     <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
+        android:id="@+id/username_user2"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:text="@string/nome_usuario2"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="183dp"
         tools:layout_editor_absoluteY="125dp" />
 
     <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
+        android:id="@+id/username_user4"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:text="@string/nome_usuario4"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="340dp"
         tools:layout_editor_absoluteY="125dp" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/avatar_user_2"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:srcCompat="@drawable/avatar_henriquesilva"
@@ -62,17 +62,17 @@
         tools:layout_editor_absoluteY="65dp" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/username_user1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nome_usuario1"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="102dp"
         tools:layout_editor_absoluteY="125dp" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/avatar_main_user"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:srcCompat="@drawable/user_avatar"
@@ -80,17 +80,17 @@
         tools:layout_editor_absoluteY="65dp" />
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/text_seu_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/home_seustatus"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textSize="12sp"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="125dp" />
 
     <ImageView
-        android:id="@+id/imageView20"
+        android:id="@+id/avatar_user_1"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:srcCompat="@drawable/avatar_natura"
@@ -242,6 +242,26 @@
         android:text="@string/btn_compartilhar"
         tools:layout_editor_absoluteX="151dp"
         tools:layout_editor_absoluteY="511dp" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="100sp"
+        android:layout_height="30sp"
+        app:srcCompat="@drawable/logo_horizontal_verde"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="16dp" />
+
+    <Button
+        android:id="@+id/btn_compartilhar"
+        android:layout_width="wrap_content"
+        android:layout_height="40sp"
+        android:backgroundTint="@color/transparent"
+        android:drawableStart="@drawable/icon_share"
+        android:paddingLeft="20sp"
+        android:text="@string/btn_compartilhar"
+        android:textAllCaps="false"
+        tools:layout_editor_absoluteX="243dp"
+        tools:layout_editor_absoluteY="510dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
