--- a/app/src/main/res/layout/tela_login.xml
+++ b/app/src/main/res/layout/tela_login.xml
@@ -11,38 +11,53 @@
         android:id="@+id/logo_main"
         android:layout_width="213dp"
         android:layout_height="217dp"
+        android:layout_marginStart="99dp"
+        android:layout_marginTop="181dp"
+        android:layout_marginEnd="99dp"
+        android:contentDescription="@string/app_name"
         android:src="@drawable/logo_main"
-        tools:layout_editor_absoluteX="99dp"
-        tools:layout_editor_absoluteY="181dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/buttonlogin"
+        android:id="@+id/btn_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:background="@color/secondary"
         android:text="@string/login_btn_entre"
         android:textColor="@color/white"
         app:iconTint="@color/secondary"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="487dp" />
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="@string/app_slogan"
+        android:textAlignment="center"
         android:textColor="@color/secondary"
-        tools:layout_editor_absoluteX="113dp"
-        tools:layout_editor_absoluteY="431dp" />
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/logo_main"
+        app:layout_constraintStart_toStartOf="@+id/logo_main"
+        app:layout_constraintTop_toBottomOf="@+id/logo_main" />
 
-    <TextView
-        android:id="@+id/textView"
+    <Button
+        android:id="@+id/btn_cadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="@color/primary"
         android:text="@string/login_link_cadastre"
         android:textColor="@color/white"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="552dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_login"
+        app:layout_constraintStart_toStartOf="@+id/btn_login"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
